# NeoStats-services

./: .gitattributes  ChangeLog  INSTALL  Makefile.in  README.services  ReadMe  configure  configure.in  hash.c  language.c  makemask.todo  match.c  memoserv.c  new.c  nickserv.c  options.h  services.h  servicescore.c  svc_help.c
lang/: Makefile  en_us  en_us.l  index  langcomp.c  language.h
